@@ -21,6 +21,8 @@ The rules for this file:
  * 2.5.0
 
 Fixes
+  * Fixed ChainReader performing transformations correctly across boundaries in the individual trajectories
+    (Issue #3657 #4008 PR #3906)
   * Fix the `heavy` distance_type for water bridge analysis where distance
     is not correctly assigned when more than one hydrogen is bonded to a
     heavy atom (Issue #4040, PR #4066).
